# motd-embed-api

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DEPLOYMENT.md  Dockerfile  README.md  docker-compose.build.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
src/motd_embed_api/: cache.py  config.py  html_generator.py  image_generator.py  main.py  metrics.py  middleware.py  motd_parser.py  server.py
static/: index.html  motd-embed.css
tests/: conftest.py  test_cache.py  test_config.py  test_endpoints.py  test_html_generator.py  test_image_generator.py  test_motd_parser.py  test_server.py
