[project]
name = "motd-embed-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Anthony Kovach", email = "aj@ajxd2.dev" }
]
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.128.0",
    "jinja2>=3.1.6",
    "mcstatus>=12.0.6",
    "uvicorn>=0.40.0",
    "slowapi>=0.1.9",
    "cachetools>=5.3.0",
]

[project.scripts]
motd-embed-api = "motd_embed_api:main"

[build-system]
requires = ["uv_build>=0.9.24,<0.10.0"]
build-backend = "uv_build"
