[project]
name = "motd-embed-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Anthony Kovach", email = "aj@ajxd2.dev" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "jinja2>=3.1.6",
    "mcstatus>=12.0.6",
    "uvicorn>=0.40.0",
    "slowapi>=0.1.9",
    "cachetools>=5.3.0",
    "pydantic-settings>=2.3.0",
    "prometheus-client>=0.20.0",
    "pillow>=10.4.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.15.7",
]

[project.scripts]
motd-embed-api = "motd_embed_api:main"

[build-system]
requires = ["uv_build>=0.9.24,<0.10.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--tb=short"
